--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -58,12 +58,12 @@
           <div class="modal-body">
             <form
               name="reserve"
+              onsubmit="return validate(event)"
               action="index.html"
               method="get"
-              onsubmit="return validate();"
             >
               <div
-                class="formData">
+                class="formData"   data-error-visible="false">
                 <label>Prénom</label><br>
                 <input
                   class="text-control"
@@ -71,11 +71,12 @@
                   id="first"
                   name="first"
                   minlength="2"
+                
                 /><br>
-                <p class="errorMessage"> Veuillez entrer 2 caractères ou plus pour le champ du prénon.</p>
+                <p class="errorMessage">Veuillez entrer 2 caractères ou plus pour le champ du prénon.</p>
               </div>
               <div
-                class="formData">
+                class="formData"  data-error-visible="false">
                 <label>Nom</label><br>
                 <input
                   class="text-control"
@@ -83,10 +84,10 @@
                   id="last"
                   name="last"
                 /><br>
-                <p class="errorMessage"> Veuillez entrer 2 caractères ou plus pour le champ du nom.</p>
+                <p class="errorMessage">Veuillez entrer 2 caractères ou plus pour le champ du nom.</p>
               </div>
               <div
-                class="formData">
+                class="formData"  data-error-visible="false">
                 <label>E-mail</label><br>
                 <input
                   class="text-control"
@@ -97,7 +98,7 @@
                 <p class="errorMessage"> Veuillez entrer email valide.</p>
               </div>
               <div
-                class="formData">
+                class="formData"  data-error-visible="false">
                 <label>Date de naissance</label><br>
                 <input
                   class="text-control"
@@ -105,11 +106,12 @@
                   id="birthdate"
                   name="birthdate"
                 /><br>
+                <p class="errorMessage">Veuillez entrer votre date de naissance</p>
               </div>
               <div
-                class="formData">
+                class="formData"  data-error-visible="false">
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
+                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" value="0">
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div
@@ -180,7 +182,9 @@
                   <span class="checkbox-icon"></span>
                   Portland</label
                 >
+                <p class="errorMsg">Veuillez selectionner un tournoi</p>
               </div>
+            
 
               <div
                 class="formData">
@@ -211,6 +215,14 @@
               />
             </form>
           </div>
+        </div>
+      </div>
+      <!-- Page de confirmation -->
+      <div class="bground2">
+        <div class="content2">
+          <span class="close"></span>
+          <p class="texte-comfirmation">Merci pour votre inscription</p>
+          <button class="btn-close">Fermer</button>
         </div>
       </div>
     </main>
