refactorisation de certaine fonction

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -109,13 +109,15 @@
                 <p id="errorMsg-birthdate"></p>
               </div>
               <div
-                class="formData"  data-error-visible="false">
+                class="formData" data-error-visible="" >
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" value="0">
+              <br>
+                <p id="errorMsg-birthdate"></p>
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div
-                class="formData" data-error-visible="false">
+                class="formData" >
                 <input
                   class="checkbox-input"
                   type="radio"
@@ -187,7 +189,7 @@
             
 
               <div
-                class="formData" data-error-visible="false">
+                class="formData" >
                 <input
                   class="checkbox-input"
                   type="checkbox"
@@ -199,7 +201,7 @@
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
                 <br>
-                <p class="errorMsg1"></p>
+                <p id="errorMsg-condition"></p>
                 <input class="checkbox-input" type="checkbox" id="checkbox2" />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
