--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Reservation</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="stylesheet" href="modal.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link
-      href="https://fonts.googleapis.com/css?family=DM+Sans"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <div class="topnav" id="myTopnav">
-      <div class="header-logo">
+
+<head>
+  <meta charset="utf-8" />
+  <title>Reservation</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="stylesheet" href="modal.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="topnav" id="myTopnav">
+    <div class="header-logo">
       <img alt="logo" src="Logo.png" width="auto" height="auto" />
     </div>
     <div class="main-navbar">
-      
       <a href="#" class="active"><span>Accueil</span></a>
       <a href="#"><span>Détails de l'évènement</span></a>
       <a href="#"><span>À propos</span></a>
@@ -27,210 +25,142 @@
         <i class="fa fa-bars"></i>
       </a>
     </div>
-    </div>
   </div>
-    <main>
-      <div class="hero-section">
-        <div class="hero-content">
-          <h1 class="hero-headline">
-            Marathon national<br>
-            de jeux vidéos
-          </h1>
-          <p class="hero-text">
-            Vous aimez jouer ? Notre prochain évènement gaming est ouvert
-            aux réservations... Places limitées !
-          </p>
-          <button class="btn-signup modal-btn">
-            je m'inscris
-          </button>
-        </div>
-        <div class="hero-img">
-          <img src="./bg_img.jpg" alt="img" />
-        </div>
+  </div>
+
+  <main>
+    <div class="hero-section">
+      <div class="hero-content">
+        <h1 class="hero-headline">
+          Marathon national<br>
+          de jeux vidéos
+        </h1>
+        <p class="hero-text">
+          Vous aimez jouer ? Notre prochain évènement gaming est ouvert
+          aux réservations... Places limitées !
+        </p>
         <button class="btn-signup modal-btn">
           je m'inscris
         </button>
       </div>
+      <div class="hero-img">
+        <img src="./bg_img.jpg" alt="img" />
+      </div>
+      <button class="btn-signup modal-btn">
+        je m'inscris
+      </button>
+    </div>
 
-      <div class="bground">
-        <div class="content">
-          <span class="close close-confirm"></span>
-          <div class="modal-body">
-            <form
-              name="reserve"
-              id="submit-form"
-              action="index.html"
-              method="get"
-            >
-              <div
-                class="formData"   data-error-visible="false">
-                <label for="first">Prénom</label><br>
-                <input
-                  class="text-control"
-                  type="text"
-                  id="first"
-                  name="first"
-                  minlength="2"
-                
-                /><br>
-                <span class="error-text"id="errorMsg-first"></span>
-              </div>
-              <div
-                class="formData"  data-error-visible="false">
-                <label for="last" >Nom</label><br>
-                <input
-                  class="text-control"
-                  type="text"
-                  id="last"
-                  name="last"
-                /><br>
-                <span class="error-text" id="errorMsg-last"></span>
-              </div>
-              <div
-                class="formData"  data-error-visible="false">
-                <label for="email">E-mail</label><br>
-                <input
-                  class="text-control"
-                  type="email"
-                  id="email"
-                  name="email"
-                /><br>
-                <span class="error-text" id="errorMsg-email"></span>
-              </div>
-              <div
-                class="formData"  data-error-visible="false">
-                <label for="birthdate" >Date de naissance</label><br>
-                <input
-                  class="text-control"
-                  type="date"
-                  id="birthdate"
-                  name="birthdate"
-                /><br>
-                <span class="error-text" id="errorMsg-birthdate"></span>
-              </div>
-              <div
-                class="formData" data-error-visible="" >
-                <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" value="0">
+    <div class="bground">
+      <div class="content">
+        <span class="close close-confirm"></span>
+        <div class="modal-body">
+          <form name="reserve" id="submit-form" action="index.html" method="get">
+            <div class="formData" data-error-visible="false">
+              <label for="first">Prénom</label><br>
+              <input class="text-control" type="text" id="first" name="first" minlength="2" /><br>
+              <span class="error-text" id="errorMsg-first"></span>
+            </div>
+
+            <div class="formData" data-error-visible="false">
+              <label for="last">Nom</label><br>
+              <input class="text-control" type="text" id="last" name="last" /><br>
+              <span class="error-text" id="errorMsg-last"></span>
+            </div>
+
+            <div class="formData" data-error-visible="false">
+              <label for="email">E-mail</label><br>
+              <input class="text-control" type="email" id="email" name="email" /><br>
+              <span class="error-text" id="errorMsg-email"></span>
+            </div>
+
+            <div class="formData" data-error-visible="false">
+              <label for="birthdate">Date de naissance</label><br>
+              <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
+              <span class="error-text" id="errorMsg-birthdate"></span>
+            </div>
+
+            <div class="formData" data-error-visible="">
+              <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+              <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" value="0">
               <br>
-                <span class="error-text" id="errorMsg-birthdate"></span>
-              </div>
-              <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
-              <div
-                class="formData" >
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location1"
-                  name="location"
-                  value="New York"
-                />
-                <label class="checkbox-label" for="location1">
-                  <span class="checkbox-icon"></span>
-                  New York</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location2"
-                  name="location"
-                  value="San Francisco"
-                />
-                <label class="checkbox-label" for="location2">
-                  <span class="checkbox-icon"></span>
-                  San Francisco</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location3"
-                  name="location"
-                  value="Seattle"
-                />
-                <label class="checkbox-label" for="location3">
-                  <span class="checkbox-icon"></span>
-                  Seattle</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location4"
-                  name="location"
-                  value="Chicago"
-                />
-                <label class="checkbox-label" for="location4">
-                  <span class="checkbox-icon"></span>
-                  Chicago</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location5"
-                  name="location"
-                  value="Boston"
-                />
-                <label class="checkbox-label" for="location5">
-                  <span class="checkbox-icon"></span>
-                  Boston</label
-                >
-                <input
-                  class="checkbox-input"
-                  type="radio"
-                  id="location6"
-                  name="location"
-                  value="Portland"
-                />
-                <label class="checkbox-label" for="location6">
-                  <span class="checkbox-icon"></span>
-                  Portland</label
-                ><br>
-                <span class="error-text" id="errorMsg-tournoi"></span>
-              </div>
-                          <div
-                class="formData" >
-                <input
-                  class="checkbox-input"
-                  type="checkbox"
-                  id="checkbox1"
-                  checked
-                />
-                <label class="checkbox2-label" for="checkbox1" required>
-                  <span class="checkbox-icon"></span>
-                  J'ai lu et accepté les conditions d'utilisation.
-                </label>
-                <br>
-                <p class="error-text" id="errorMsg-condition"></p>
-                <input class="checkbox-input" type="checkbox" id="checkbox2" />
-                <label class="checkbox2-label" for="checkbox2">
-                  <span class="checkbox-icon"></span>
+              <span class="error-text" id="errorMsg-birthdate"></span>
+            </div>
+
+            <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
+            <div class="formData">
+              <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" />
+              <label class="checkbox-label" for="location1">
+                <span class="checkbox-icon"></span>
+                New York</label>
+
+              <input class="checkbox-input" type="radio" id="location2" name="location" value="San Francisco" />
+              <label class="checkbox-label" for="location2">
+                <span class="checkbox-icon"></span>
+                San Francisco</label>
+
+              <input class="checkbox-input" type="radio" id="location3" name="location" value="Seattle" />
+              <label class="checkbox-label" for="location3">
+                <span class="checkbox-icon"></span>
+                Seattle</label>
+
+              <input class="checkbox-input" type="radio" id="location4" name="location" value="Chicago" />
+              <label class="checkbox-label" for="location4">
+                <span class="checkbox-icon"></span>
+                Chicago</label>
+
+              <input class="checkbox-input" type="radio" id="location5" name="location" value="Boston" />
+              <label class="checkbox-label" for="location5">
+                <span class="checkbox-icon"></span>
+                Boston</label>
+
+              <input class="checkbox-input" type="radio" id="location6" name="location" value="Portland" />
+              <label class="checkbox-label" for="location6">
+                <span class="checkbox-icon"></span>
+                Portland</label><br>
+
+              <span class="error-text" id="errorMsg-tournoi"></span>
+            </div>
+
+            <div class="formData">
+              <input class="checkbox-input" type="checkbox" id="checkbox1" checked />
+              <label class="checkbox2-label" for="checkbox1" required>
+                <span class="checkbox-icon"></span>
+                J'ai lu et accepté les conditions d'utilisation.
+              </label>
+              <br>
+
+              <p class="error-text" id="errorMsg-condition"></p>
+              <input class="checkbox-input" type="checkbox" id="checkbox2" />
+              <label class="checkbox2-label" for="checkbox2">
+                <span class="checkbox-icon"></span>
                 Je souhaite être prévenu des prochains évènements.
-                </label>
-                <br>
-              </div>
-              <input
-                class="btn-submit"
-                type="submit"
-                class="button"
-                value="C'est parti"
-              />
-            </form>
-          </div>
+              </label>
+              <br>
+
+            </div>
+            <input class="btn-submit" type="submit" class="button" value="C'est parti" />
+          </form>
         </div>
       </div>
-      <!-- Page de confirmation -->
-      <div class="bground2">
-        <div class="content2">
-          <span class="close close-confirm"></span>
-          <p class="texte-comfirmation">Merci pour votre inscription</p>
-          <button class="btn-close close-confirm">Fermer</button>
-        </div>
+    </div>
+
+    <!-- Page de confirmation -->
+    <div class="bground2">
+      <div class="content2">
+        <span class="close close-confirm"></span>
+        <p class="texte-comfirmation">Merci pour votre inscription</p>
+        <button class="btn-close close-confirm">Fermer</button>
       </div>
-    </main>
-    <footer>
-      <p class="copyrights">
-        Copyright 2014 - 2022, GameOn Inc.
-      </p>
-    </footer>
-    <script type="module" src="modal.mjs"></script>
-  </body>
+    </div>
+  </main>
+  
+  <footer>
+    <p class="copyrights">
+      Copyright 2014 - 2022, GameOn Inc.
+    </p>
+  </footer>
+  <script type="module" src="modal.mjs"></script>
+</body>
+
 </html>
