--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet" />
 </head>
-
+<script type="module" src="modal.mjs"></script>
 <body>
   <div class="topnav" id="myTopnav">
     <div class="header-logo">
@@ -21,7 +21,7 @@
       <a href="#"><span>À propos</span></a>
       <a href="#"><span>Contact</span></a>
       <a href="#"><span>Évènements passés</span></a>
-      <a href="javascript:void(0);" class="icon" onclick="editNav()">
+      <a href="javascript:void(0);" class="icon" id="editNav">
         <i class="fa fa-bars"></i>
       </a>
     </div>
@@ -160,7 +160,7 @@
       Copyright 2014 - 2022, GameOn Inc.
     </p>
   </footer>
-  <script type="module" src="modal.mjs"></script>
+
 </body>
 
 </html>
